gui/scss/core/_global.scss
/////////////////
// Helper Classes
/////////////////

:focus {
  outline: none;
}

.muted {
  opacity: 0.5;
}

.noselect {
  cursor: default;
  -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome and Opera */
}

// Fix icon alignment
.fa, .fas, .far, .fal, .fab {
  vertical-align: -0%;
}

.pointer {
  cursor: pointer;
}

.sticky {
    position: sticky;
    top: 0;
    z-index: 3000;
}

.edit-effect-header {
    background: $light-background-color;
    //border-bottom: 1px solid $effect-option-title;
}

.variable-menu {
  width: 500px;
  background: #060707;
  position: absolute;
  right: 0px;
  top: -307px;
  z-index: 3000;
  border-radius: 4px;
  &.below {
    top: 36px;
  }
  &.bottom {
    bottom: 36px;
    top: unset;
  }
  &.under {
    bottom: -307px;
    top: unset;
  }
}

.variables-btn {
  width: 30px;
  height: 15px;
  background: #0b8dc6;
  position: absolute;
  bottom:0;
  right:0;
  border-radius:4px;
  font-size: 10px;
  text-align: center;
  margin: 0 7px 7px 0;
  cursor: pointer;
  user-select: none;
  opacity: 1;
  z-index: 100;
  &:hover {
    animation: delayed-hide 500ms;
    animation-delay: 500ms;
    animation-fill-mode: forwards;
    opacity: 0.5;
  }
  &.below {
    margin: 0 0px -16px 0;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
  }
}

@keyframes delayed-hide {
  from {opacity: 0.5}
  to {opacity: 0.05}
}


.sticky-top {
  position: sticky;
  top: 0;
  z-index: 99999999;

  &.is-stuck {
      border-bottom: 1px solid #24262A;
      //margin-bottom: 10px;
      box-shadow: 0 5px 11px 0px #0000004d;
  }
}

.sticky-bottom {
  position: sticky;
  bottom: 0;
  z-index: 99999999;

  &.is-stuck {
      border-top: 1px solid #24262A;
      //margin-bottom: 10px;
      box-shadow: 0 -6px 9px -2px #0000004d;
  }
}

.light-bg {
  background: $light-background-color;
}


///

/////////////////////////////////
// v4.0 STYLES (Needs organizing!!)
////////////////////////////////

html {
  height: 100%;
}

body {
 height: 100%;
 margin: 0px;
 padding-top: 0;
 padding-bottom: 0;
 font-family: 'Open Sans', sans-serif !important;
 color:$content-text-color;
}

.fb-tab-content {
 height: 100%;
 width: 100%;
 display: flex;
 flex-direction: column;
 background: $light-background-color;
}

.tab-header {
  width: 100%;
  height: 65px;
  background: $light-background-color + 20%;
  border-bottom: 2px solid $light-background-border;
  display: flex;
  flex-flow: row;
  align-items: center;
  justify-content: space-between;
  padding-left: 30px;
  font-size: 29px;
  color: $content-text-color;
  flex-shrink: 0;
  z-index: 100;
  span {
    text-transform: uppercase;
    font-weight: 100;
  }
}
.tab-body-wrapper {
 height: 100%;
 width: 100%;
 overflow-y: scroll;
 z-index: 10;
}
.tab-body {
 padding: 15px;
 display: flex;
}
.content-block {
 background: $light-background-color + 20%;
 border-radius: 3px;
 border: 0.01em solid $light-background-border;
 box-shadow: 2px 2px 7px $light-background-box-shadow;
}

.content-block-header {
  display: flex;
  position: relative;
  align-items: center;
  height: 50px;
  width: 100%;
  border-bottom: 0.01em solid $light-background-border;
  &:empty {
    display: none;
  }
}

.content-block-body {
 margin: 15px;
 position: relative;
}

.close{
  color: $content-text-color;
  opacity: 1;
}

.fb-nav {
  position:relative;
 height: 100%;
 width: 223px;
 display: flex;
 flex-shrink: 0;
 flex-grow: 0;
 flex-direction: column;
 transition: 0.5s;
 white-space: nowrap;
 background: $sidebar-bg; /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
}
.fb-nav.contracted {
 width: 62px;
}
.nav-header {
  width: 100%;
  height: 65px;
  background: $dark-background-color;
  border-bottom: 2px solid $dark-background-border;
  display: flex;
  flex-flow: row;
  align-items: center;
  justify-content: flex-start;
  position: relative;
  overflow: hidden;
  flex-shrink: 0;
}

.nav-body-wrapper {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.nav-links-wrapper {
  padding-top: 15px;
  overflow-y: scroll;
  overflow-x: hidden;
  height: 100%;
  &::-webkit-scrollbar {
    width: 0px;
    background: transparent;
  }
  &:hover::-webkit-scrollbar {
    width: 5px;
  }
  &:hover::-webkit-scrollbar-track {
    background-color: transparent;
  }

  &:hover::-webkit-scrollbar-thumb {
    background-color: #9a9fa0;
    border-radius: 5px;
  }

  &.contracted::-webkit-scrollbar {
    width: 0px;
    background: transparent;
  }
}

.fb-nav-link-category {
  padding-bottom: 5px;
  &.pad-top {
    padding-top: 7px;
    padding-bottom: 0px;
    .spacing {
      padding-top: 7px;
      border-bottom: 1px solid #383d3f;
      opacity: 0;
      transition: 0.5s;
    }
    .spacing.contracted {
      opacity: 1;
    }
  }
  span {
    opacity: 1;
    color: #6F7074;
    font-weight: 700;
    transition: 0.3s;
    padding-left: 21px;
  }
  span.contracted {
    opacity: 0;
  }
}
//nav stuff

.fullpage-tab {
  height: 100%;
  padding: 0;
  position: relative;
}

.no-scroll {
  overflow-y: hidden;
}

.fb-nav-link {
 color:#dadada;
 display: block;
 height: 42px;
 text-transform: uppercase;
 text-decoration: none;
 position: relative;
}
.fb-nav-link:hover {
 background: $left-nav-link-text-hover-color;
 text-decoration: none;
}

.fb-nav-link.selected, .fb-nav-link.selected:hover {
 color: white;
 background: $nav-link-bg;
}
.nav-link-bar {
 height: 100%;
 width: 6px;
 display: inline-block;
}

.selected .nav-link-bar {
 background: $highlight-color;
}

.selected .nav-link-icon {
 color: $highlight-color;
}
/* ... */

